# clc

./: .dockerignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md
.cargo/: audit.toml
.github/: dependabot.yaml
.github/actions/cache-cargo/: action.yaml
.github/actions/cargo-publish/: action.yaml
.github/actions/install-tools/: action.yaml
.github/actions/setup/: action.yaml
.github/workflows/: audit.yaml  cd-engine.yaml  cd-gql.yaml  cd.yaml  ci.yaml
calculator/: Cargo.toml  Makefile.toml  README.md
calculator-cli/: Cargo.toml  Makefile.toml
calculator-cli/src/: cli.rs  prompt.rs  repl.rs
calculator-cli/tests/: clc.rs
calculator/benches/: my_benchmark.rs
calculator/src/: eval.rs
calculator/src/parse/: parse_impl.rs
clc/: Cargo.toml  README.md
clc-cli/: Cargo.toml  README.md
clc-cli/.project/: README.tpl
clc-cli/.project/container/: Dockerfile
clc-cli/.project/scripts/: version.rs
clc-cli/src/: cli.rs  lib.rs  main.rs  repl.rs
clc-cli/tests/: clc.rs
clc-core/: Cargo.toml  README.md
clc-core/benches/: my_benchmark.rs
clc-core/src/: errors.rs  lib.rs
clc-engine/: CHANGELOG.md  Cargo.toml  README.md
clc-engine/.project/: README.tpl
clc-engine/benches/: my_benchmark.rs
clc-engine/src/: calculator.rs  errors.rs  eval.rs  expression.rs  lib.rs  macros.rs  parse.rs
clc-engine/src/eval/: func_call.rs  scope.rs
clc-engine/src/expression/: constant.rs  func_call.rs  lambda.rs  macros.rs
clc-engine/src/parse/: parse_impl.rs
clc-gql/: CHANGELOG.md  Cargo.toml  Makefile.toml  README.md
clc-gql/.project/: README.tpl
clc-gql/.project/container/: Dockerfile
clc-gql/.project/local/: .env  docker-compose.yaml
clc-gql/src/: cache.rs  cli.rs  config.rs  dependency.rs  errors.rs  gql.rs  main.rs  server.rs  signal.rs
clc-gql/src/cache/: cache_impl.rs
clc-gql/src/gql/: errors.rs  query.rs  schema.rs
clc-gql/src/server/: handler.rs
clc/benches/: my_benchmark.rs
clc/src/: calculator.rs  parse.rs
