[package]
name = "clc-cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Calculator command line interface app"
repository = "https://github.com/ymgyt/calculator"
readme = "README.md"
keywords = ["calculator"]
categories = ["command-line-utilities"]

[[bin]]
name = "clc"
path = "src/bin/clc.rs"

[dependencies]
clap = { version = "3.1.6", features = ["derive", "wrap_help"] }
clc-core = { path = "../clc-core", version = "0.1.0" }
reedline = "0.3.0"

[dev-dependencies]
assert_cmd = "2.0.4"
