[package]
name = "clc"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Calculator command line interface app"
repository = "https://github.com/ymgyt/calculator"
readme = "README.md"
keywords = ["calculator"]
categories = ["command-line-utilities"]
exclude = ["/.project"]

[[bin]]
name = "clc"
path = "src/bin/clc.rs"

[dependencies]
clap = { version = "3.1.6", features = ["derive", "wrap_help"] }
clc-engine = { path = "../clc-engine", version = "0.1.1" }
reedline = "0.3.0"

[dev-dependencies]
assert_cmd = "2.0.4"
