[package]
name = "clc"
version = "0.1.4"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Calculator command line interface app"
repository = "https://github.com/ymgyt/calculator"
readme = "README.md"
keywords = ["calculator"]
categories = ["command-line-utilities"]
exclude = ["/.project", "!/.project/scripts/version.rs"]
default-run = "clc"

[[bin]]
name = "clc"
path = "src/main.rs"

[[bin]]
# Used in ci for get current version.
name = "clc-version"
path = ".project/scripts/version.rs"

[dependencies]
clap = { version = "4.0.15", features = ["derive", "wrap_help"] }
clc-engine = { path = "../clc-engine", version = "0.1.4" }
reedline = "0.10.0"

[dev-dependencies]
assert_cmd = "2.0.4"
