[package]
name = "clc-engine"
version = "0.1.4"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Provide calculation api for calculator ui"
repository = "https://github.com/ymgyt/calculator"
readme = "README.md"
exclude = ["/.project"]

[dependencies]
nom = "7.1.3"
num-traits = "0.2.17"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "my_benchmark"
harness = false
