[package]
name = "clc-gql"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Calculator graphql interface app"
repository = "https://github.com/ymgyt/calculator"
readme = "README.md"
keywords = ["calculator"]
exclude = ["/.project", "!/.project/scripts/version.rs"]
default-run = "clcgql"

[[bin]]
name = "clcgql"
path = "src/main.rs"

[[bin]]
# Used in ci for get current version.
name = "gql-version"
path = ".project/scripts/version.rs"

[features]
default = []
cache = ["redis"]

[dependencies.async-graphql]
version = "3.0.38"

[dependencies.async-graphql-axum]
version = "3.0.37"

[dependencies.axum]
version = "0.4"
features = ["headers", "http1", "http2", "tower-log"]

[dependencies.clap]
version = "3.2.14"
features = ["derive", "env", "wrap_help"]

[dependencies.clc-engine]
path = "../clc-engine"
version = "0.1.4"

[dependencies.redis]
version = "0.21.5"
features = ["tokio-comp"]
optional = true

[dependencies.thiserror]
version = "1.0.31"

[dependencies.tokio]
version = "1.20.0"
features = ["signal", "rt", "rt-multi-thread", "macros"]

[dependencies.tower]
version = "0.4.12"

[dependencies.tower-http]
version = "0.3.3"
features = ["trace"]

[dependencies.tracing]
version = "0.1.34"

[dependencies.tracing-subscriber]
version = "0.3.14"
features = ["env-filter", "local-time"]

[dev-dependencies]
reqwest = "0.11.10"

[dev-dependencies.tokio]
version = "1.20.0"
features = ["signal", "rt", "rt-multi-thread", "macros", "test-util", "sync"]
