[package]
name = "clc-gql"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Calculator graphql interface app"
repository = "https://github.com/ymgyt/calculator"
readme = "README.md"
keywords = ["calculator"]
exclude = ["/.project", "!/.project/scripts/version.rs"]
default-run = "clcgql"

[[bin]]
name = "clcgql"
path = "src/main.rs"

[[bin]]
# Used in ci for get current version.
name = "gql-version"
path = ".project/scripts/version.rs"

[features]
default = []
cache = ["redis"]

[dependencies.async-graphql]
version = "5.0"

[dependencies.async-graphql-axum]
version = "4.0"

[dependencies.axum]
version = "0.5"
features = ["headers", "http1", "http2", "tower-log"]

[dependencies.clap]
version = "3.2.17"
features = ["derive", "env", "wrap_help"]

[dependencies.clc-engine]
path = "../clc-engine"
version = "0.1.4"

[dependencies.redis]
version = "0.22.3"
features = ["tokio-comp"]
optional = true

[dependencies.thiserror]
version = "1.0.38"

[dependencies.tokio]
version = "1.25.0"
features = ["signal", "rt", "rt-multi-thread", "macros"]

[dependencies.tower]
version = "0.4.12"

[dependencies.tower-http]
version = "0.3.3"
features = ["trace"]

[dependencies.tracing]
version = "0.1.37"

[dependencies.tracing-subscriber]
version = "0.3.16"
features = ["env-filter", "local-time"]

[dev-dependencies]
reqwest = "0.11.14"

[dev-dependencies.tokio]
version = "1.25.0"
features = ["signal", "rt", "rt-multi-thread", "macros", "test-util", "sync"]
